add native access flag to the tests